# smart-math

./: .gitignore  .hlint.yaml  CHANGELOG.md  Makefile  README.md  cabal.project  cabal.project.arithmoi  cabal.project.prime-prof  flake.nix  hie.yaml  smart-math.cabal  stack.yaml  stack_lts-18.yaml  stack_lts-19.yaml  stack_nightly.yaml
.github/workflows/: cabal.yaml  cabal_8-10.yaml  cabal_9-0.yaml  cabal_9-2.yaml  ci.yaml  ghc_8-10-7.yaml  ghc_8-10.yaml  ghc_9-0-2.yaml  ghc_9-0.yaml  ghc_9-2-1.yaml  ghc_9-2.yaml  nix_ci.yaml  stack.yaml  stack_lts-18.yaml  stack_lts-19.yaml  stack_nightly.yaml  style_ci.yaml
app/: Main.hs
benchmarks/: Main.hs  baseline_9.6.5.csv  baseline_ubuntu-latest_9.12.2_ci.csv  baseline_ubuntu-latest_9.2.8_ci.csv  baseline_ubuntu-latest_9.4.7_ci.csv  baseline_ubuntu-latest_9.6.3_ci.csv  baseline_ubuntu-latest_9.8.4_ci.csv
docs/: CHANGELOG.md  Numeric-Class-Boundless.html  Numeric-Class-Division.html  Numeric-Data-Fraction-Algebra-Internal.html  Numeric-Data-Fraction-Algebra.html  Numeric-Data-Fraction-Base-Internal.html  Numeric-Data-Fraction-Base.html  Numeric-Data-Fraction-Internal.html  Numeric-Data-Fraction.html  Numeric-Data-Internal-Utils.html  Numeric-Data-Interval-Algebra-Internal.html  Numeric-Data-Interval-Algebra.html  Numeric-Data-Interval-Base-Internal.html  Numeric-Data-Interval-Base.html  Numeric-Data-Interval-Internal.html  Numeric-Data-Interval.html  Numeric-Data-ModN-Algebra-Internal.html  Numeric-Data-ModN-Algebra.html  Numeric-Data-ModN-Base-Internal.html  Numeric-Data-ModN-Base.html  Numeric-Data-ModN-Internal.html  Numeric-Data-ModN.html  Numeric-Data-ModP-Algebra-Internal.html  Numeric-Data-ModP-Algebra.html  Numeric-Data-ModP-Base-Internal.html  Numeric-Data-ModP-Base.html  Numeric-Data-ModP-Internal-Primality.html  Numeric-Data-ModP-Internal.html  Numeric-Data-ModP.html  Numeric-Data-NonNegative-Algebra-Internal.html  Numeric-Data-NonNegative-Algebra.html  Numeric-Data-NonNegative-Base-Internal.html  Numeric-Data-NonNegative-Base.html  Numeric-Data-NonNegative-Internal.html  Numeric-Data-NonNegative.html  Numeric-Data-NonZero-Algebra-Internal.html  Numeric-Data-NonZero-Algebra.html  Numeric-Data-NonZero-Base-Internal.html  Numeric-Data-NonZero-Base.html  Numeric-Data-NonZero-Internal.html  (+11 more)
docs/src/: Numeric.Class.Boundless.html  Numeric.Class.Division.html  Numeric.Data.Fraction.Algebra.Internal.html  Numeric.Data.Fraction.Algebra.html  Numeric.Data.Fraction.Base.Internal.html  Numeric.Data.Fraction.Base.html  Numeric.Data.Fraction.Internal.html  Numeric.Data.Fraction.html  Numeric.Data.Internal.Utils.html  Numeric.Data.Interval.Algebra.Internal.html  Numeric.Data.Interval.Algebra.html  Numeric.Data.Interval.Base.Internal.html  Numeric.Data.Interval.Base.html  Numeric.Data.Interval.Internal.html  Numeric.Data.Interval.html  Numeric.Data.ModN.Algebra.Internal.html  Numeric.Data.ModN.Algebra.html  Numeric.Data.ModN.Base.Internal.html  Numeric.Data.ModN.Base.html  Numeric.Data.ModN.Internal.html  Numeric.Data.ModN.html  Numeric.Data.ModP.Algebra.Internal.html  Numeric.Data.ModP.Algebra.html  Numeric.Data.ModP.Base.Internal.html  Numeric.Data.ModP.Base.html  Numeric.Data.ModP.Internal.Primality.html  Numeric.Data.ModP.Internal.html  Numeric.Data.ModP.html  Numeric.Data.NonNegative.Algebra.Internal.html  Numeric.Data.NonNegative.Algebra.html  Numeric.Data.NonNegative.Base.Internal.html  Numeric.Data.NonNegative.Base.html  Numeric.Data.NonNegative.Internal.html  Numeric.Data.NonNegative.html  Numeric.Data.NonZero.Algebra.Internal.html  Numeric.Data.NonZero.Algebra.html  Numeric.Data.NonZero.Base.Internal.html  Numeric.Data.NonZero.Base.html  Numeric.Data.NonZero.Internal.html  Numeric.Data.NonZero.html  (+6 more)
nix/: ghc_base.nix  stack.nix  stack_base.nix
prime-prof/: Main.hs
src/: Lib.hs
src/Numeric/: Data.hs
src/Numeric/Class/: Boundless.hs  Division.hs
src/Numeric/Data/: Fraction.hs  Interval.hs  ModN.hs  ModP.hs  NonNegative.hs  NonZero.hs  Optics.hs  Positive.hs
src/Numeric/Data/Fraction/: Algebra.hs  Base.hs  Internal.hs
src/Numeric/Data/Fraction/Algebra/: Internal.hs
src/Numeric/Data/Fraction/Base/: Internal.hs
src/Numeric/Data/Internal/: Utils.hs
src/Numeric/Data/Interval/: Algebra.hs  Base.hs  Internal.hs
src/Numeric/Data/Interval/Algebra/: Internal.hs
src/Numeric/Data/Interval/Base/: Internal.hs
src/Numeric/Data/ModN/: Algebra.hs  Base.hs  Internal.hs
src/Numeric/Data/ModN/Algebra/: Internal.hs
src/Numeric/Data/ModN/Base/: Internal.hs
src/Numeric/Data/ModP/: Algebra.hs  Base.hs  Internal.hs
src/Numeric/Data/ModP/Algebra/: Internal.hs
src/Numeric/Data/ModP/Base/: Internal.hs
src/Numeric/Data/ModP/Internal/: Primality.hs
src/Numeric/Data/NonNegative/: Algebra.hs  Base.hs  Internal.hs
src/Numeric/Data/NonNegative/Algebra/: Internal.hs
src/Numeric/Data/NonNegative/Base/: Internal.hs
src/Numeric/Data/NonZero/: Algebra.hs  Base.hs  Internal.hs
src/Numeric/Data/NonZero/Algebra/: Internal.hs
src/Numeric/Data/NonZero/Base/: Internal.hs
src/Numeric/Data/Positive/: Algebra.hs  Base.hs  Internal.hs
src/Numeric/Data/Positive/Algebra/: Internal.hs
src/Numeric/Data/Positive/Base/: Internal.hs
test/doctest/: Main.hs
test/props/: Equality.hs  Gens.hs  Main.hs  MaxRuns.hs  Utils.hs
test/props/Test/: TestBounds.hs
test/props/Test/Algebra/Additive/: AGroup.hs  AMonoid.hs  ASemigroup.hs
test/props/Test/Algebra/Multiplicative/: MGroup.hs  MMonoid.hs  MSemigroup.hs
test/props/Test/Data/: Fraction.hs  Interval.hs  ModN.hs  ModP.hs  NonNegative.hs  Positive.hs
test/props/Test/Data/ModP/: Internal.hs
test/unit/: Equality.hs  Gens.hs  Main.hs  Utils.hs
test/unit/Test/: Prelude.hs
test/unit/Test/Algebra/Additive/: AGroup.hs  AMonoid.hs  ASemigroup.hs
test/unit/Test/Algebra/Multiplicative/: MGroup.hs  MMonoid.hs  MSemigroup.hs
test/unit/Test/Data/: Fraction.hs  Interval.hs  ModN.hs  ModP.hs  NonNegative.hs  NonZero.hs  Positive.hs
test/unit/Test/Data/ModP/: Internal.hs
tools/: bench.sh  format.sh  haddock.sh  prime-prof.sh
